log
Sun Mar 20 22:58:57 UTC 2022: 
 list.c | 71 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 64 insertions(+), 7 deletions(-)
 tests:  5|4
total_score: 25/70
8568e81
Sun Mar 20 22:59:18 UTC 2022: 
 list.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
d4a8050
Sun Mar 20 22:59:48 UTC 2022: 
 list.c | 31 +++++++++++++++++++++++++++++--
 1 file changed, 29 insertions(+), 2 deletions(-)
 tests:  0|0
92b5e55
Sun Mar 20 23:00:06 UTC 2022: 
 list.c | 28 +---------------------------
 1 file changed, 1 insertion(+), 27 deletions(-)
 tests:  6|4
total_score: 25/70
4f171fd
Sun Mar 20 23:01:46 UTC 2022: 
 list.c | 28 +++++++++++++++++++++++++++-
 1 file changed, 27 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7cb8204
Sun Mar 20 23:02:56 UTC 2022: 
 list.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ac81b22
Sun Mar 20 23:07:39 UTC 2022: 
 list.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
856e6b3
Sun Mar 20 23:07:56 UTC 2022: 
 list.c | 17 -----------------
 1 file changed, 17 deletions(-)
In file included from test.c:5:0:
list.c: In function ‘popCurrent’:
list.c:192:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
5829f68
Sun Mar 20 23:08:14 UTC 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
de62b2b
Sun Mar 20 23:15:54 UTC 2022: 
 list.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
2ef4275
Sun Mar 20 23:16:33 UTC 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
a419e14
Sun Mar 20 23:30:49 UTC 2022: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  0|0
8223cba
